# Traditional_RAG

./: .gitignore  README.md  pyproject.toml
src/: arxiv_fetcher.py  config.py  document_processor.py  ingestion_pipeline.py  vector_store.py
tests/: test_document_processor.py  test_embedding_provider.py  test_fetch.py  test_vector_retrieval.py
