[project]
name = "traditional-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-openai",
    "langchain-chroma",
    "chromadb",
    "arxiv",
    "pymupdf",
    "pypdf",
    "python-dotenv",
    "fastapi",
    "uvicorn",
]

[dependency-groups]
orchestrator = [
    "apache-airflow>=3.2.2",
]
