[project]
name = "traditional-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-openai",
    "langchain-chroma",
    "chromadb",
    "arxiv",
    "pymupdf",
    "pypdf",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "langchain-huggingface>=1.2.2",
    "sentence-transformers>=5.6.0",
]

[dependency-groups]
orchestrator = [
    "apache-airflow>=3.2.2",
]
